[package]
name = "rust-patch"
description = "Patch structs with other structs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[workspace]
members = [".", "rust-patch-derive"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["netthier <lp@senselabs.de>"]
repository = "https://github.com/SenseLabsDE/rust-patch"
categories = ["no-std", "no-std::no-alloc", "development-tools"]
keywords = ["patch", "struct"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
rust-patch-derive = { version = "=0.1.2", path = "./rust-patch-derive" }