[package]
name = "rust-patch-derive"
description = "Derive macro implementation for rust-patch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["parsing"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"